--- a/package.json
+++ b/package.json
@@ -3,46 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 1035",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 1035",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
-    "@next/bundle-analyzer": "^14.0.3",
-    "@next/env": "^14.0.3",
+    "@hookform/resolvers": "^2.9.10",
+    "@next/env": "^13.1.6",
     "@popperjs/core": "^2.11.6",
-    "@reduxjs/toolkit": "^1.9.7",
-    "bootstrap": "^5.3.2",
-    "dayjs": "^1.11.10",
-    "eslint": "8.54.0",
-    "eslint-config-next": "14.0.3",
-    "next": "^14.0.5-canary.0",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^9.3.0",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
+    "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.7",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.4",
+    "next": "13.0.4",
     "react": "18.2.0",
-    "react-bootstrap": "^2.9.1",
+    "react-bootstrap": "^2.8.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.48.2",
-    "react-modal-video": "^2.0.1",
+    "react-hook-form": "^7.42.1",
+    "react-modal-video": "^2.0.0",
     "react-paginate": "^8.1.4",
-    "react-redux": "^8.1.3",
+    "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
-    "react-timer-hook": "^3.0.7",
-    "react-to-print": "^2.14.15",
+    "react-timer-hook": "^3.0.5",
+    "react-to-print": "^2.14.11",
     "react-toastify": "^9.1.1",
-    "react-tooltip": "^5.24.0",
-    "react-use": "^17.4.1",
-    "sass": "^1.69.5",
-    "sharp": "^0.33.0",
+    "react-tooltip": "^5.3.1",
+    "react-use": "^17.4.0",
+    "sass": "^1.56.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.5",
-    "yup": "^1.3.2"
-  },
-  "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^5.0.0"
+    "yup": "^0.32.11"
   }
 }
