--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
+    "@vercel/speed-insights": "^1.0.2",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "eslint": "8.28.0",
