--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm i sharp && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.9.10",
+    "@hookform/resolvers": "^3.3.2",
     "@next/bundle-analyzer": "^14.0.3",
-    "@next/env": "^13.1.6",
+    "@next/env": "^14.0.4",
     "@popperjs/core": "^2.11.6",
-    "@reduxjs/toolkit": "^1.9.1",
-    "@stripe/react-stripe-js": "^1.16.4",
-    "@stripe/stripe-js": "^1.46.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.2",
     "@vercel/speed-insights": "^1.0.2",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.4",
-    "next": "13.0.4",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4",
+    "next": "14.0.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-copy-to-clipboard": "^5.1.0",
@@ -29,7 +29,7 @@
     "react-hook-form": "^7.42.1",
     "react-modal-video": "^2.0.0",
     "react-paginate": "^8.1.4",
-    "react-redux": "^8.0.5",
+    "react-redux": "^9.0.4",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-timer-hook": "^3.0.5",
@@ -39,7 +39,7 @@
     "react-use": "^17.4.0",
     "sass": "^1.56.1",
     "slick-carousel": "^1.8.1",
-    "swiper": "^8.4.5",
-    "yup": "^0.32.11"
+    "swiper": "^11.0.5",
+    "yup": "^1.3.3"
   }
 }
