--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 1035 --turbo",
     "build": "npm i sharp && next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,10 +17,11 @@
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.2",
     "@vercel/speed-insights": "^1.0.2",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.2",
     "dayjs": "^1.11.7",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "install": "^0.13.0",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -39,7 +40,7 @@
     "react-use": "^17.4.0",
     "sass": "^1.56.1",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.0.5",
+    "swiper": "^8.4.5",
     "yup": "^1.3.3"
   }
 }
