--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 1035 --turbo",
+    "dev": "next dev -p 1035",
     "build": "npm i sharp && next build",
     "start": "next start",
     "lint": "next lint"
@@ -40,6 +40,7 @@
     "react-tooltip": "^5.3.1",
     "react-use": "^17.4.0",
     "sass": "^1.56.1",
+    "sharp": "^0.33.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.5",
     "yup": "^1.3.3"
