--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.7",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "install": "^0.13.0",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -39,6 +40,8 @@
     "react-tooltip": "^5.3.1",
     "react-use": "^17.4.0",
     "sass": "^1.56.1",
+    "sharp": "^0.33.1",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.4.5",
     "yup": "^1.3.3"
   }
